# zwd

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  SECURITY.md  committed.toml  devbox.json  dist-workspace.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  committed.yml  release-plz.yml  release.yml
docs/adr/: 0001-release-automation.md  0002-simplify-create-command.md  0003-use-zwd-as-public-command.md
resources/schemas/: code-workspace.schema.json
src/: cli.rs  error.rs  install.rs  lib.rs  workspace.rs
tests/: cli.rs
