[package]
name = "zed-workspace-dock"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
description = "Rust CLI for opening Zed workspace files through a managed symlink dock."
license = "MIT"
publish = false
repository = "https://github.com/runrly/zed-workspace-dock"
homepage = "https://github.com/runrly/zed-workspace-dock"
readme = "README.md"
keywords = ["zed", "workspace", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zwd"
path = "src/bin/zwd.rs"

[package.metadata.dist]
dist = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
getrandom = "0.4.3"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
